--- a/i18n/en.json
+++ b/i18n/en.json
@@ -10,26 +10,66 @@
 	"gloopcontrol-log-name": "Weird Gloop network log",
 	"gloopcontrol-log-header": "This is a log of actions taken by Weird Gloop staff members using [[Special:GloopControl]] on this wiki.",
 	"logentry-gloopcontrol-task": "$1 ran task \"$4\" on target $3",
-	"gloopcontrol-config-intro": "This page outputs a serialized JSON list of global variables on this wiki that begin with <code>$wg</code> or <code>$wmg</code>. Some sensitive configuration variables are hidden from this list.",
+	"gloopcontrol-error-2fa": "You must [[Special:Manage Two-factor authentication|enable two-factor authentication]] to use this page.",
+	"gloopcontrol-textformat-space": "&#32;",
+	"gloopcontrol-linkbar-main": "Main",
+	"gloopcontrol-linkbar-getuserinfo": "Get user info",
+	"gloopcontrol-linkbar-runtask": "Run task",
+	"gloopcontrol-linkbar-config": "Config",
+	"gloopcontrol-info": "Wiki information",
+	"gloopcontrol-info-server": "Server:",
+	"gloopcontrol-info-database": "Database:",
+	"gloopcontrol-info-database-shared": "Shared database:",
+	"gloopcontrol-info-wiki": "Wiki:",
+	"gloopcontrol-info-host": "Host:",
+	"gloopcontrol-info-php": "PHP version:",
+	"gloopcontrol-user": "Get user information",
+	"gloopcontrol-user-desc": "Use this tool to learn more about a particular user, such as their email address.",
 	"gloopcontrol-user-username": "Username",
-	"gloopcontrol-tasks-reassign-target": "Username to re-assign edits to",
+	"gloopcontrol-user-unknown": "Unknown",
+	"gloopcontrol-user-none": "None",
+	"gloopcontrol-user-email-confirmed": "confirmed at",
+	"gloopcontrol-user-email-unconfirmed": "unconfirmed",
+	"gloopcontrol-user-blocked": "Is blocked here:",
+	"gloopcontrol-user-blockinfo": "<!-- Yes -->, since $1. Block added by $2. Expires at $3.",
+	"gloopcontrol-user-groups": "Groups:",
+	"gloopcontrol-user-touched": "Last touched:",
+	"gloopcontrol-user-lastedit": "Last edit:",
+	"gloopcontrol-user-ipaddress": "IP address:",
+	"gloopcontrol-user-unavailable": "Unavailable",
+	"gloopcontrol-user-migrated-no": "Needs external wiki migration",
+	"gloopcontrol-user-migrated-yes": "No external migration needed",
+	"gloopcontrol-user-2fa": "2FA enabled:",
+	"gloopcontrol-user-button-rename": "Rename",
+	"gloopcontrol-user-button-email": "Change email",
+	"gloopcontrol-user-button-reassign": "Reassign edits",
+	"gloopcontrol-user-button-password": "Reset password",
 	"gloopcontrol-user-not-found": "'''$1''' was not found in the database.",
+	"gloopcontrol-tasks": "Run task",
+	"gloopcontrol-tasks-desc": "Emulates running various maintenance scripts for a wiki without requiring direct server or database access.",
 	"gloopcontrol-tasks-intro": "This page allows you to emulate running specific maintenance scripts without having direct server access by re-implementing their logic. Actions taken on this page [[Special:Log/gloopcontrol|are logged]]. If you require something that is not listed here, please contact a sysadmin.",
 	"gloopcontrol-tasks-task": "Task to run",
+	"gloopcontrol-tasks-task-emailaddress": "Change user email address",
+	"gloopcontrol-tasks-task-password": "Change user password",
+	"gloopcontrol-tasks-task-reassign": "Re-assign edits",
+	"gloopcontrol-tasks-task-anonymize": "Anonymize data",
 	"gloopcontrol-tasks-username": "Username",
+	"gloopcontrol-tasks-comment": "Comment",
+	"gloopcontrol-tasks-confirm": "Tick to confirm that you intend to perform this action. Please double-check your inputs!",
 	"gloopcontrol-tasks-email": "New email address",
 	"gloopcontrol-tasks-password": "New password",
 	"gloopcontrol-tasks-invalidate": "Also invalidate user's sessions (will log them out)",
-	"gloopcontrol-tasks-comment": "Comment",
-	"gloopcontrol-tasks-confirm": "Tick to confirm that you intend to perform this action. Please double-check your inputs!",
+	"gloopcontrol-tasks-reassign-target": "Username to re-assign edits to",
+	"gloopcontrol-tasks-error-user-self": "You cannot perform an action on yourself using this form. Please contact a sysadmin.",
 	"gloopcontrol-tasks-error-user-not-found": "'''$1''' was not found in the database.",
 	"gloopcontrol-tasks-error-password-invalid": "The password you entered is not a valid password on this wiki.",
 	"gloopcontrol-tasks-error-user-anonymize-failed": "Could not anonymize '''$1'''. An error occurred.",
-	"gloopcontrol-tasks-error-user-self": "You cannot perform an action on yourself using this form. Please contact a sysadmin.",
-	"gloopcontrol-tasks-success-email": "Changed email for '''$1''' to '''$2'''",
-	"gloopcontrol-tasks-success-password": "Changed password for '''$1'''",
-	"gloopcontrol-tasks-success-reassign": "Re-assigned edits from '''$1''' to '''$2''' on this wiki",
-	"gloopcontrol-tasks-success-anonymize": "Anonymized user '''$1'''",
 	"gloopcontrol-tasks-warning-email-already-set": "'''$1''' already has that email address.",
-	"gloopcontrol-error-2fa": "You must [[Special:Manage_Two-factor_authentication|enable two-factor authentication]] to use this page."
+	"gloopcontrol-tasks-success-email": "Changed email for '''$1''' to '''$2'''.",
+	"gloopcontrol-tasks-success-password": "Changed password for '''$1'''.",
+	"gloopcontrol-tasks-success-reassign": "Re-assigned edits from '''$1''' to '''$2''' on this wiki.",
+	"gloopcontrol-tasks-success-anonymize": "Anonymized user '''$1'''.",
+	"gloopcontrol-config": "Site config",
+	"gloopcontrol-config-desc": "View all defined configuration variables for this wiki.",
+	"gloopcontrol-config-intro": "This page outputs a serialized JSON list of global variables on this wiki that begin with <code>$wg</code> or <code>$wmg</code>. Some sensitive configuration variables are hidden from this list."
 }
